# poetry-precommit-demo

./:  requirements.txt  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
project-name/: main.py
